tests/paczka1/fuzzy1/92723446.err
Error in line 9: LzD A145 12,0
Error in line 12: SiWjJnqMGt A623 36,5
Error in line 18: 2F7 S17 80,9
Error in line 28: LzD A145 0,3
Error in line 29: 2F7 A145 44,4
Error in line 37: 2F7 A623 66,2
